--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -325,6 +325,7 @@
         android:background="@null"
         android:scaleType="fitXY"
         android:scaleX="1"
+        android:tint="@drawable/button_pressed"
         app:layout_constraintEnd_toEndOf="@+id/timeInputLayout"
         app:layout_constraintStart_toStartOf="@+id/dateInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/dateInputLayout"
