--- a/app/src/main/res/layout/activity_follower_request.xml
+++ b/app/src/main/res/layout/activity_follower_request.xml
@@ -7,5 +7,42 @@
     android:background="@drawable/background"
     tools:context=".ui.FollowerRequestActivity">
 
+    <TextView
+        android:id="@+id/follower_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:gravity="center_vertical"
+        android:text="Follower Requests"
+        android:textAppearance="@style/drop_shadow"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/back_button"
+        app:layout_constraintStart_toEndOf="@+id/back_button"
+        app:layout_constraintTop_toTopOf="@+id/back_button" />
+
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:tint="@drawable/button_pressed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_button" />
+
+    <ListView
+        android:id="@+id/request_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:dividerHeight="-0.5dp"
+        android:layout_marginBottom="@dimen/navBar_distance"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/back_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
