--- a/app/src/main/res/layout/request_list_content.xml
+++ b/app/src/main/res/layout/request_list_content.xml
@@ -28,7 +28,8 @@
     <LinearLayout
         android:background="@color/transparent_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/name"
@@ -56,6 +57,7 @@
             android:background="@null"
             android:text="Accept"
             style="@style/WhiteText"
+            android:textColor="@drawable/button_pressed"
             android:textAppearance="@style/drop_shadow"/>
 
         <Button
@@ -66,6 +68,7 @@
             android:background="@null"
             android:text="Reject"
             style="@style/WhiteText"
+            android:textColor="@drawable/button_pressed"
             android:textAppearance="@style/drop_shadow"/>
     </LinearLayout>
 
