small fix for location input

--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -223,7 +223,7 @@
         android:ems="10"
         android:hint="@string/add_post_description_hint"
         android:inputType="textPersonName"
-        android:textColorHint="@color/color_white"
+        android:textColorHint="@color/selected_color"
         android:maxLength="@integer/max_char_length"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/addPictureButton"
@@ -374,8 +374,9 @@
     <RelativeLayout
         android:id="@+id/locationInputLayout"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/done_button"
         app:layout_constraintEnd_toEndOf="@+id/addPictureButton"
         app:layout_constraintStart_toStartOf="@+id/socialSpinnerLayout"
@@ -397,12 +398,10 @@
             style="@style/WhiteText"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:layout_alignTop="@+id/locationText"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="false"
             android:layout_marginStart="83dp"
             android:layout_marginLeft="-2dp"
-            android:layout_marginTop="0dp"
             android:layout_toRightOf="@+id/locationText"
             android:background="@drawable/button_right_long"
             android:clickable="true"
