--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,6 +57,7 @@
             android:gravity="center"
             android:inputType="text"
             android:maxLines="1"
+            android:maxLength="@integer/max_name_length"
             android:textSize="15dp" />
 
     </RelativeLayout>
