--- a/app/src/main/res/layout/request_list_content.xml
+++ b/app/src/main/res/layout/request_list_content.xml
@@ -9,7 +9,7 @@ xmlns:tools="http://schemas.android.com/tools"
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="20"
         android:background="@null"
         android:fontFamily="@font/abeezee"
@@ -19,28 +19,28 @@ xmlns:tools="http://schemas.android.com/tools"
         android:text="Name"
         android:textAppearance="@style/drop_shadow"
         android:textAlignment="textStart"
-        android:textColor="@color/color_white"
         android:textSize="30sp"
         android:maxLength="@integer/max_name_length"
         tools:ignore="RtlCompat"/>
 
     <Button
         android:id="@+id/accept_button"
+        style="@style/WhiteText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:layout_height="match_parent"
         android:layout_weight="0.4"
         android:background="@null"
+        android:padding="5dp"
         android:text="Accept"
-        android:textSize="15sp"
+        android:textAlignment="center"
         android:textAllCaps="false"
-        style="@style/WhiteText"
-        android:textColor="@drawable/button_pressed"/>
+        android:textColor="@drawable/button_pressed"
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/reject_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="0.4"
         android:background="@null"
         android:padding="5dp"
