--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -132,8 +132,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="5dp"
             android:text="@string/mood_happy"
             android:textAlignment="center"
             android:textSize="12sp" />
@@ -200,18 +200,19 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/done_button"
-        style="@style/WhiteText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="@dimen/navBar_distance"
-        android:background="@android:color/transparent"
-        android:text="@string/add_post_done_button"
-        android:textAllCaps="false"
-        android:textColor="@drawable/button_pressed"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+            android:id="@+id/done_button"
+            style="@style/WhiteText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="@dimen/navBar_distance"
+            android:background="@android:color/transparent"
+            android:text="@string/add_post_done_button"
+            android:textAllCaps="false"
+            android:textColor="@drawable/button_pressed"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/locationInputLayout"/>
 
     <EditText
         android:id="@+id/description_edittext"
@@ -415,18 +416,19 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/cancel_button"
-        style="@style/WhiteText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="@dimen/navBar_distance"
-        android:background="@android:color/transparent"
-        android:text="@string/add_post_cancel_button"
-        android:textAllCaps="false"
-        android:textColor="@drawable/button_pressed"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            android:id="@+id/cancel_button"
+            style="@style/WhiteText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="@dimen/navBar_distance"
+            android:background="@android:color/transparent"
+            android:text="@string/add_post_cancel_button"
+            android:textAllCaps="false"
+            android:textColor="@drawable/button_pressed"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/locationInputLayout"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
