--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -321,6 +321,7 @@
         android:id="@+id/addPictureButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:minHeight="250dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         android:background="@null"
@@ -330,7 +331,7 @@
         app:layout_constraintEnd_toEndOf="@+id/timeInputLayout"
         app:layout_constraintStart_toStartOf="@+id/dateInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/dateInputLayout"
-        app:srcCompat="@drawable/add_picture_button" />
+        android:src="@drawable/add_picture_button" />
 
     <RelativeLayout
         android:id="@+id/socialSpinnerLayout"
