added image upload using gallery and camera

--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -320,8 +320,7 @@
     <ImageButton
         android:id="@+id/addPictureButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:minHeight="250dp"
+        android:layout_height="250dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         android:background="@null"
