--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,11 @@
     android:background="@drawable/background"
     tools:context=".LoginActivity">
 
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/logo" android:id="@+id/login_logo"
+            tools:layout_editor_absoluteX="0dp" app:layout_constraintBottom_toTopOf="@+id/login_signup_form"
+            android:scaleType="fitEnd"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,71 +24,70 @@
         android:onClick="showLogin" />
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp"
-        android:visibility="invisible"
-        android:id="@+id/login_signup_form">
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:visibility="invisible"
+            android:id="@+id/login_signup_form" android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in" app:layout_constraintVertical_bias="1.0"
+            android:layout_marginBottom="16dp">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/login_username"
-                android:hint="@string/login_username" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/login_username"
+                    android:hint="@string/login_username"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="date"
-                android:ems="10"
-                android:id="@+id/login_dob"
-                android:onClick="selectDate"
-                android:focusableInTouchMode="false"
-                android:cursorVisible="false"
-                android:longClickable="false"
-                android:linksClickable="false"
-                android:hint="@string/login_date" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="date"
+                    android:ems="10"
+                    android:id="@+id/login_dob"
+                    android:onClick="selectDate"
+                    android:focusableInTouchMode="false"
+                    android:cursorVisible="false"
+                    android:longClickable="false"
+                    android:linksClickable="false"
+                    android:hint="@string/login_date"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
-                android:ems="10"
-                android:id="@+id/login_bio"
-                android:hint="@string/login_bio" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:id="@+id/login_bio"
+                    android:hint="@string/login_bio"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/login_signup"
-            android:text="@string/login_sign_up"
-            android:visibility="visible"
-            android:onClick="addNewUser" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/login_signup"
+                android:text="@string/login_sign_up"
+                android:visibility="visible"
+                android:onClick="addNewUser"/>
     </LinearLayout>
 
     <FrameLayout
