--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -33,15 +33,15 @@
         app:layout_constraintTop_toBottomOf="@+id/greetingView">
 
         <RadioButton
-            android:id="@+id/icon_neutral"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_weight="0"
-            android:adjustViewBounds="true"
-            android:background="@drawable/icon_neutral_70px"
-            android:button="@null"
-            android:scaleX="0.9"
-            android:scaleY="0.9" />
+                android:id="@+id/icon_neutral"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_weight="0"
+                android:adjustViewBounds="true"
+                android:background="@drawable/icon_neutral_70px"
+                android:button="@null"
+                android:scaleX="0.9"
+                android:scaleY="0.9"/>
 
         <RadioButton
             android:id="@+id/icon_happy"
@@ -274,62 +274,61 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/dateInputLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/timeInputLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextLinearLayout">
+            android:id="@+id/dateInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/timeInputLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/TextLinearLayout">
 
 
         <TextView
-            android:id="@+id/dateText"
-            style="@style/InputButtonText"
-            android:layout_width="57dp"
-            android:layout_height="35dp"
-            android:layout_centerVertical="true"
-            android:background="@drawable/input_button_white"
-            android:gravity="center"
-            android:text="@string/add_post_date_button" />
+                android:id="@+id/dateText"
+                style="@style/InputButtonText"
+                android:layout_width="57dp"
+                android:layout_height="35dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/input_button_white"
+                android:gravity="center"
+                android:text="@string/add_post_date_button"/>
 
         <EditText
-            android:id="@+id/dateEditText"
-            style="@style/WhiteText"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_alignTop="@+id/dateText"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="false"
-            android:layout_marginStart="57dp"
-            android:layout_marginLeft="-1dp"
-            android:layout_marginTop="0dp"
-            android:layout_toRightOf="@+id/dateText"
-            android:background="@drawable/input_button_right"
-            android:clickable="true"
-            android:ems="10"
-            android:focusable="false"
-            android:gravity="center"
-            android:inputType="date"
-            android:textSize="15dp" />
+                android:id="@+id/dateEditText"
+                style="@style/WhiteText"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_alignTop="@+id/dateText"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="false"
+                android:layout_marginStart="57dp"
+                android:layout_marginLeft="-1dp"
+                android:layout_marginTop="0dp"
+                android:layout_toRightOf="@+id/dateText"
+                android:background="@drawable/input_button_right"
+                android:clickable="true"
+                android:ems="10"
+                android:focusable="false"
+                android:gravity="center"
+                android:inputType="date"
+                android:textSize="15dp"/>
 
     </RelativeLayout>
 
     <ImageButton
-        android:id="@+id/addPictureButton"
-        android:layout_width="0dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="16dp"
-        android:adjustViewBounds="true"
-        android:background="@null"
-        android:scaleType="fitXY"
-        android:scaleX="1"
-        android:tint="@drawable/button_pressed"
-        app:layout_constraintEnd_toEndOf="@+id/timeInputLayout"
-        app:layout_constraintStart_toStartOf="@+id/dateInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/dateInputLayout"
-        android:src="@drawable/add_picture_button" />
+            android:id="@+id/addPictureButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="centerInside"
+            android:scaleX="1"
+            android:tint="@drawable/button_pressed"
+            app:layout_constraintEnd_toEndOf="@+id/timeInputLayout"
+            app:layout_constraintStart_toStartOf="@+id/dateInputLayout"
+            app:layout_constraintTop_toBottomOf="@+id/dateInputLayout"
+            android:src="@drawable/add_picture_button"/>
 
     <RelativeLayout
         android:id="@+id/socialSpinnerLayout"
@@ -359,15 +358,15 @@
             android:spinnerMode="dropdown" />
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            android:scaleType="fitXY"
-            android:scaleY="0.7"
-            android:src="@drawable/spinner_bar" />
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
+                android:scaleType="fitXY"
+                android:scaleY="0.7"
+                android:src="@drawable/spinner_bar"/>
 
     </RelativeLayout>
 
@@ -393,22 +392,23 @@
             android:text="@string/add_post_location_button" />
 
         <EditText
-            android:id="@+id/locationEditText"
-            style="@style/WhiteText"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="false"
-            android:layout_marginStart="83dp"
-            android:layout_marginLeft="-2dp"
-            android:layout_toRightOf="@+id/locationText"
-            android:background="@drawable/button_right_long"
-            android:clickable="true"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textSize="15dp" />
+                android:id="@+id/locationEditText"
+                style="@style/WhiteText"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="false"
+                android:layout_marginStart="83dp"
+                android:layout_marginLeft="-2dp"
+                android:layout_toRightOf="@+id/locationText"
+                android:background="@drawable/button_right_long"
+                android:clickable="true"
+                android:ems="10"
+                android:gravity="center"
+                android:inputType="text"
+                android:maxLines="1"
+                android:focusable="false"
+                android:textSize="15dp"/>
 
     </RelativeLayout>
 
