--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -237,6 +237,43 @@
             android:textColorHint="@color/selected_color"
             android:textSize="16sp" />
 
+        <RelativeLayout
+                android:id="@+id/locationInputLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
+
+
+            <TextView
+                    android:id="@+id/locationText"
+                    style="@style/InputButtonText"
+                    android:layout_width="85dp"
+                    android:layout_height="35dp"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/input_button_white"
+                    android:gravity="center"
+                    android:text="@string/add_post_location_button"/>
+
+            <EditText
+                    android:id="@+id/locationEditText"
+                    style="@style/WhiteText"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentBottom="false"
+                    android:layout_marginStart="83dp"
+                    android:layout_marginLeft="-2dp"
+                    android:layout_toRightOf="@+id/locationText"
+                    android:background="@drawable/button_right_long"
+                    android:clickable="true"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:gravity="center"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:textSize="15dp"/>
+
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -280,43 +317,6 @@
 
             </RelativeLayout>
 
-            <RelativeLayout
-                android:id="@+id/locationInputLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-
-
-                <TextView
-                    android:id="@+id/locationText"
-                    style="@style/InputButtonText"
-                    android:layout_width="85dp"
-                    android:layout_height="35dp"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/input_button_white"
-                    android:gravity="center"
-                    android:text="@string/add_post_location_button" />
-
-                <EditText
-                    android:id="@+id/locationEditText"
-                    style="@style/WhiteText"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentBottom="false"
-                    android:layout_marginStart="83dp"
-                    android:layout_marginLeft="-2dp"
-                    android:layout_toRightOf="@+id/locationText"
-                    android:background="@drawable/button_right_long"
-                    android:clickable="true"
-                    android:ems="10"
-                    android:focusable="false"
-                    android:gravity="center"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:textSize="15dp" />
-
-            </RelativeLayout>
         </LinearLayout>
 
         <RelativeLayout
@@ -332,7 +332,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginBottom="@dimen/navBar_distance"
                 android:background="@android:color/transparent"
                 android:text="@string/add_post_done_button"
                 android:textAllCaps="false"
@@ -347,13 +346,15 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="@dimen/navBar_distance"
                 android:background="@android:color/transparent"
                 android:text="@string/add_post_cancel_button"
                 android:textAllCaps="false"
                 android:textColor="@drawable/button_pressed" />
 
         </RelativeLayout>
+        <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/navBar_distance"/>
     </LinearLayout>
 
 </ScrollView>
