--- a/app/src/main/res/layout/mood_list_content_friends.xml
+++ b/app/src/main/res/layout/mood_list_content_friends.xml
@@ -16,7 +16,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/name_friends"
             app:srcCompat="@drawable/icon_scared"
-            tools:layout_editor_absoluteY="0dp"></ImageView>
+            tools:layout_editor_absoluteY="0dp">
+        </ImageView>
 
         <TextView
             android:id="@+id/name_friends"
@@ -30,7 +31,8 @@
             android:text="Name"
             android:textAlignment="center"
             android:textColor="@color/color_white"
-            android:textSize="22sp"></TextView>
+            android:textSize="22sp">
+        </TextView>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -49,7 +51,8 @@
                 android:text="Date"
                 android:textAlignment="center"
                 android:textColor="@color/color_white"
-                android:textSize="18sp"></TextView>
+                android:textSize="18sp">
+            </TextView>
 
             <TextView
                 android:id="@+id/time_friends"
@@ -62,7 +65,8 @@
                 android:text="Time"
                 android:textAlignment="center"
                 android:textColor="@color/color_white"
-                android:textSize="18sp"></TextView>
+                android:textSize="18sp">
+            </TextView>
         </LinearLayout>
 </LinearLayout>
 
