--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
-        android:id="@+id/searchInputLayout"
+        android:id="@+id/usernameLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -32,7 +32,7 @@
 
 
         <TextView
-            android:id="@+id/searchView"
+            android:id="@+id/usernameView"
             style="@style/InputButtonText"
             android:textSize="20dp"
             android:layout_width="100dp"
@@ -47,13 +47,13 @@
             style="@style/WhiteText"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_alignTop="@+id/searchView"
+            android:layout_alignTop="@+id/usernameView"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="false"
             android:layout_marginStart="83dp"
             android:layout_marginLeft="-2dp"
             android:layout_marginTop="0dp"
-            android:layout_toRightOf="@+id/searchView"
+            android:layout_toRightOf="@+id/usernameView"
             android:background="@drawable/button_right_long"
             android:clickable="true"
             android:ems="10"
@@ -111,7 +111,7 @@
         android:layout_marginBottom="8dp"
         android:text="Follow Requests"
         app:layout_constraintBottom_toTopOf="@+id/follow_request_button"
-        app:layout_constraintStart_toStartOf="@+id/searchInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout" />
+        app:layout_constraintStart_toStartOf="@+id/usernameLayout"
+        app:layout_constraintTop_toBottomOf="@+id/usernameLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
