--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -8,25 +8,25 @@
     android:orientation="vertical">
 
     <Button
-            android:id="@+id/show_on_map_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            android:layout_weight="0"
-            android:background="@drawable/button_design"
-            android:fontFamily="@font/abeezee"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="@dimen/default_left_padding"
-            android:text="Show on map"
-            android:textAllCaps="false"
-            android:textColor="@color/color_angry"
-            android:textColorHighlight="@color/color_surprised"
-            android:textSize="@dimen/default_font_size"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:onClick="openMap"/>
+        android:id="@+id/show_on_map_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="0"
+        android:background="@drawable/button_design"
+        android:fontFamily="@font/abeezee"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="@dimen/default_left_padding"
+        android:text="Show on map"
+        android:textAllCaps="false"
+        android:textColor="@color/color_angry"
+        android:textColorHighlight="@color/color_surprised"
+        android:textSize="@dimen/default_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:id="@+id/filterSpinnerLayout"
