--- a/app/src/main/res/layout/friend_request_list_content.xml
+++ b/app/src/main/res/layout/friend_request_list_content.xml
@@ -3,35 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/transparent_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:background="@color/transparent_background"
-            android:fontFamily="@font/abeezee"
-            android:gravity="center_vertical"
-            android:padding="10dp"
-            android:paddingStart="16dp"
-            android:text="Name"
-            android:textAppearance="@style/drop_shadow"
-            android:textAlignment="textStart"
-            android:textColor="@color/color_white"
-            android:textSize="30sp"
-            android:maxLength="@integer/max_name_length"
-            tools:ignore="RtlCompat"/>
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@null"
+        android:fontFamily="@font/abeezee"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:paddingStart="16dp"
+        android:text="Name"
+        android:textAppearance="@style/drop_shadow"
+        android:textAlignment="textStart"
+        android:textColor="@color/color_white"
+        android:textSize="30sp"
+        android:maxLength="@integer/max_name_length"
+        tools:ignore="RtlCompat"/>
     <Button
-            android:id="@+id/follow_button"
-            style="@style/WhiteText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="10dp"
-            android:text="Follow"
-            android:textAllCaps="false"
-            android:textColor="@drawable/button_pressed" android:background="@android:color/transparent"/>
+        android:id="@+id/follow_button"
+        style="@style/WhiteText"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:text="Follow"
+        android:textAllCaps="false"
+        android:textColor="@drawable/button_pressed"
+        android:background="@null"/>
 
 </LinearLayout>
