Small UI Fix for friend saerch suggestion

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/followView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
@@ -34,13 +35,13 @@
         <TextView
             android:id="@+id/usernameView"
             style="@style/InputButtonText"
-            android:textSize="20dp"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:background="@drawable/input_button_white"
             android:gravity="center"
-            android:text="@string/search_input_text" />
+            android:text="@string/search_input_text"
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/search_friends_edittext"
@@ -70,7 +71,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:text="Friends List"
         app:layout_constraintBottom_toTopOf="@+id/friend_list"
         app:layout_constraintStart_toStartOf="@+id/follow_request_button"
@@ -80,6 +80,7 @@
         android:id="@+id/friend_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="@dimen/navBar_distance"
         android:dividerHeight="-0.5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -107,7 +108,7 @@
         style="@style/WhiteText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Follow Requests"
         app:layout_constraintBottom_toTopOf="@+id/follow_request_button"
