--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -59,6 +59,7 @@
             android:clickable="true"
             android:ems="10"
             android:gravity="center"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
             android:textSize="15dp" />
