res: fix resources

--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -61,8 +61,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/social_spinner"
-            android:layout_alignParentLeft="false"
+            android:layout_alignParentStart="false"
             android:adjustViewBounds="true"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
